Change log for hexer, the multi-view binary editor

0.1.5
	- taken over by Peter Pentchev <roam@ringlet.net>
	- remove the "bdir" and "ef" settings from the Vim modelines to
	  make them actually acceptable to today's Vim
	- add a config.posix file to reflect a modern POSIX-like system
	- bring config.linux up to date
	- add a HAVE_STRERROR definition to the config files and roll out
	  our own strerror() function if needed
	- clean up the header files:
	  - remove "extern" before the function prototypes

0.1.4c
	- the last version released by Sascha Demetrio <demetrio@cs.uni-sb.de>