@@ -5,16 +5,16 @@
 #  -- Where? --
 #  The following lines determine where the binaries and manual pages for
 #  hexer are gonna live.
-PREFIX = /usr/local
-BINDIR = $(PREFIX)/bin
-MANDIR = $(PREFIX)/man/man1
+PREFIX ?= /usr/local
+BINDIR ?= $(PREFIX)/bin
+MANDIR ?= $(PREFIX)/man/man1
 
 #  -- Which terminal library? --
 #  (It's probably save to leave the following lines unchanged.)
 #
 #  Use the following two lines, if you want to use the termcap-library.
-TERMLIB =
-TERMCAP = -ltermcap -lm
+TERMLIB ?=
+TERMCAP ?= -ltermcap -lm
 #
 #  Uncomment these if you want to use curses.
 #TERMLIB =
@@ -30,9 +30,10 @@ TERMCAP = -ltermcap -lm
 DEFINES = -DHEXER_VERSION=\"0.1.5\"
 
 #  -- Which compiler? --
-CC = cc
-CFLAGS = -O $(DEFINES)
-LDFLAGS =
+CC ?= cc
+CFLAGS ?= -O
+CFLAGS += $(DEFINES)
+LDFLAGS ?=
 LDLIBS = $(TERMCAP)
 #
 #  Uncomment the following lines if you want to use the GNU compiler.
@@ -42,9 +43,9 @@ LDLIBS = $(TERMCAP)
 #LDLIBS = $(TERMCAP)
 
 #  -- Which installer? --
-INSTALL = install
-INSTALLBIN = $(INSTALL) -s
-INSTALLMAN = $(INSTALL) -m 644
+INSTALL ?= install
+INSTALLBIN ?= $(INSTALL) -s
+INSTALLMAN ?= $(INSTALL) -m 644
 #
 #  Uncomment these if you don't have an installer.
 #INSTALL = cp
