@@ -10,6 +10,7 @@ Change log for hexer, the multi-view binary editor
 	  our own strerror() function if needed
 	- clean up the header files:
 	  - remove "extern" before the function prototypes
+	- allow the user to override most of the Makefile variables
 
 0.1.4c
 	- the last version released by Sascha Demetrio <demetrio@cs.uni-sb.de>
